--- a/src/cascadia/TerminalApp/TerminalAppLib.vcxproj.filters
+++ b/src/cascadia/TerminalApp/TerminalAppLib.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="Tab.cpp">
       <Filter>tab</Filter>
     </ClCompile>
+    <ClCompile Include="SettingsTab.cpp">
+      <Filter>tab</Filter>
+    </ClCompile>
     <ClCompile Include="FilteredCommand.cpp">
       <Filter>commandPalette</Filter>
     </ClCompile>
@@ -74,6 +77,9 @@
     <ClInclude Include="Tab.h">
       <Filter>tab</Filter>
     </ClInclude>
+    <ClInclude Include="SettingsTab.h">
+      <Filter>tab</Filter>
+    </ClInclude>
     <ClInclude Include="FilteredCommand.h">
       <Filter>commandPalette</Filter>
     </ClInclude>
@@ -109,6 +115,12 @@
     <Midl Include="IDirectKeyListener.idl" />
     <Midl Include="TerminalSettings.idl">
       <Filter>settings</Filter>
+    </Midl>
+    <Midl Include="ITab.idl">
+      <Filter>tab</Filter>
+    </Midl>
+    <Midl Include="SettingsTab.idl">
+      <Filter>tab</Filter>
     </Midl>
     <Midl Include="TerminalTab.idl">
       <Filter>tab</Filter>
