--- a/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
+++ b/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
@@ -44,6 +44,9 @@
     <ClInclude Include="FontWeightConverter.h">
       <DependentUpon>FontWeightConverter.idl</DependentUpon>
     </ClInclude>
+    <ClInclude Include="InvertedBooleanToVisibilityConverter.h">
+      <DependentUpon>InvertedBooleanToVisibilityConverter.idl</DependentUpon>
+    </ClInclude>
     <ClInclude Include="PercentageConverter.h">
       <DependentUpon>PercentageConverter.idl</DependentUpon>
     </ClInclude>
@@ -114,6 +117,9 @@
     <ClCompile Include="FontWeightConverter.cpp">
       <DependentUpon>FontWeightConverter.idl</DependentUpon>
     </ClCompile>
+    <ClCompile Include="InvertedBooleanToVisibilityConverter.cpp">
+      <DependentUpon>InvertedBooleanToVisibilityConverter.idl</DependentUpon>
+    </ClCompile>
     <ClCompile Include="PercentageConverter.cpp">
       <DependentUpon>PercentageConverter.idl</DependentUpon>
     </ClCompile>
@@ -151,6 +157,7 @@
     <Midl Include="ColorToBrushConverter.idl" />
     <Midl Include="ColorToHexConverter.idl" />
     <Midl Include="FontWeightConverter.idl" />
+    <Midl Include="InvertedBooleanToVisibilityConverter.idl" />
     <Midl Include="PercentageConverter.idl" />
     <Midl Include="EnumEntry.idl" />
     <Midl Include="GlobalAppearance.idl">
