--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -1,9 +1,7 @@
 name: Spell checking
 on:
+  pull_request_target:
   push:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron: '15 * * * *'
 
 jobs:
   build:
@@ -12,9 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2.0.0
       with:
+        ref: ${{ github.event.pull_request.head.sha }}
         fetch-depth: 5
-    - uses: check-spelling/check-spelling@0.0.16-alpha
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        bucket: .github/actions
-        project: spell-check
+    - uses: check-spelling/check-spelling@0.0.17-alpha
