--- a/src/cascadia/TerminalApp/TerminalAppLib.vcxproj.filters
+++ b/src/cascadia/TerminalApp/TerminalAppLib.vcxproj.filters
@@ -131,6 +131,9 @@
     <Midl Include="HighlightedText.idl">
       <Filter>highlightedText</Filter>
     </Midl>
+    <Midl Include="TerminalTabStatus.idl">
+      <Filter>tab</Filter>
+    </Midl>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
