--- a/src/server/lib/server.vcxproj
+++ b/src/server/lib/server.vcxproj
@@ -58,13 +58,13 @@
     <ClInclude Include="..\WinNTControl.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\host\dll\Host.DLL.vcxproj">
+    <ProjectReference Include="..\..\host\proxy\Host.Proxy.vcxproj">
       <Project>{e437b604-3e98-4f40-a927-e173e818ea4b}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-        <AdditionalIncludeDirectories>$(IntDir)..\Host.ProxyDll;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+        <AdditionalIncludeDirectories>$(IntDir)..\OpenConsoleProxy;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <!-- Careful reordering these. Some default props (contained in these files) are order sensitive. -->
