--- a/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
+++ b/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
@@ -245,7 +245,7 @@
       <SubType>Designer</SubType>
     </PRIResource>
     <OCResourceDirectory Include="Resources" />
-    <None Include="TerminalSettingsEditor.def" />
+    <None Include="$(ProjectName).def" />
     <None Include="packages.config" />
     <None Include="PropertySheet.props" />
   </ItemGroup>
